implemented ConnectionTest